[package]
name = "twitcasting"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "Async, strongly typed Rust bindings for the TwitCasting API v2"
license = "MIT"
authors = ["Tommy Chiang <ty1208chiang@gmail.com>"]
repository = "https://github.com/oToToT/twitcasting-rs"
documentation = "https://docs.rs/twitcasting"
homepage = "https://github.com/oToToT/twitcasting-rs"
keywords = ["twitcasting", "api", "async"]
categories = ["api-bindings"]

[dependencies]
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync"] }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
